--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-spinkit": "^1.5.1",
+    "react-native-syntax-highlighter": "^2.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "tailwindcss": "^3.4.17"
