--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "skipLibCheck": true,
     "noEmit": true,
     "jsx": "react-native",
+    "typeRoots": ["./types", "./node_modules/@types"],
     "types": [
       "nativewind/types"
     ],
